[Home]

Summary:ASTERISK-25089: res_pjsip_config_wizard: Variable specified in templates aren't being processed correctly
Reporter:George Joseph (gjoseph)Labels:
Date Opened:2015-05-14 17:54:55Date Closed:2015-05-16 16:14:29
Priority:MinorRegression?
Status:Closed/CompleteComponents:Resources/res_pjsip
Versions:SVN 13.3.2 Frequency of
Occurrence
Constant
Related
Issues:
Environment:Attachments:
Description:With the following config
{code}
[template](!)
transport = ipv4

[ep](template)
transport = ipv4-tls
{code}
The wizard is still using ipv4 as the transport instead of ipv4-tls.
Comments: